<resources>
    <string name="app_name">CPMISAPP</string>
    <string name="text_forgot_password">Forgot Password ?</string>
    <string name="loading">Loading ...</string>
    <string name="user_name">Enter User Name</string>
    <string name="search">Search ..</string>
    <string name="fill_from">Fill Form</string>
    <string name="gok">GOK</string>
    <string name="usg">USG</string>
    <string name="select_category">Select Category</string>
    <string name="click_search">Search</string>
    <string name="fill_form">Fill Details</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="form_1a_">Form 1A</string>
    <string name="form_1a_detail_activity">Form 1A Details</string>
    <string name="form_1a_assessment">Assessment</string>
    <string name="form_1a_critical_events">Critical Event(s)</string>
    <string name="form_1a_priority_needs">Priority Need(s)</string>
    <string name="form_1a_services">Services</string>
    <string name="ovc_search">OVC Search ...</string>
    <string name="choose_form">Choose Form</string>
    <string name="title_activity_ovc_selection">Organization Unit</string>
    <string name="title_activity_ovc">OVC</string>
    <string name="title_activity_csi">CSI</string>
    <string name="domain_evaluation">Domain Evaluation</string>
    <string name="csi_priorities">CSI Priorities</string>
    <string name="support_services">Support/Service</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orgunit">OrGUNIT</string>


    <!--Fill assessment forms-->
    <string name="pick_date">Pick Date</string>
    <string name="date_hint">17-July-2018</string>
    <string name="domain"> Critical Events </string>
    <string name="critical_events">Domain </string>
    <string name="change_of_care_giver">Change Of Caregiver </string>
    <string name="add_priority_need">Add Priority Need </string>
    <string name="add_assessment">Add Assessment </string>
    <string name="submit_assessment">Submit Assessments </string>
    <string name="submit_priority_need">Submit Priority Needs </string>
    <string name="service">Service </string>
    <string name="priority_need">Priority Need </string>
    <string name="service_status">Service Status </string>
    <string name="add_services">Add Service</string>
    <string name="submit_services">Submit Services</string>
    <string name="submit_critical_events">Submit Critical Events</string>

</resources>
