<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/sp_16"
    tools:context=".OVC_CARE_Forms.Fragments.Form1A.Form1ACriticalEvents">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/sp_80"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/linear_design"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp_5">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_5"
                    android:text="@string/domain"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/services_domain_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linear_design">

                </android.support.v7.widget.AppCompatSpinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp_5">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/service_status"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sp_60"
                    android:background="@drawable/linear_design"
                    android:weightSum="1">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/servicesNeedDate"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/sp_40"
                        android:layout_weight="0.7"
                        android:hint="@string/date_hint"
                        android:textAlignment="center" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btnservicesPickDate"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/sp_40"
                        android:layout_weight="0.3"
                        android:text="@string/pick_date" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp_5">

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sp_16"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/add_services" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerFilledAssessment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/sp_10"
        android:background="@color/colorPrimaryDark"
        android:text="@string/submit_services" />


</RelativeLayout>