<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/row_padding_vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/row_padding_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="65">


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/ovc_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usg"
                android:ellipsize="end"
                android:lines="1"
                android:textColor="@color/ovc_name"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">


                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/ovc_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/gok"
                    android:textColor="@color/ovc_location" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/ovc_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="45"
                    android:lines="1"
                    android:ellipsize="end"
                    android:text="@string/gok"
                    android:textColor="@color/ovc_location" />


            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="0dp"
            android:id="@+id/btn_fill_ovc_form"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:ellipsize="end"
            android:text="@string/fill_from" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightDark"
        android:paddingTop="@dimen/dp_5" />

</LinearLayout>