<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_marginTop="40dp"
    tools:context=".CPIMSActivities.OVC_CARE">

    <android.support.v7.widget.CardView
        android:id="@+id/card_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardBackgroundColor="#ffffff"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="0dp"
        card_view:cardUseCompatPadding="false">

        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/linear_design"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:layout_margin="10sp"
                android:textStyle="bold"
                android:text="@string/ovc_search"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:textSize="@dimen/sp_20"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:padding="24dp">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/search_ovc_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/search"
                        android:inputType="textPersonName"
                        android:maxLength="50"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinner_search_criteria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown">

                </android.support.v7.widget.AppCompatSpinner>

                <Button
                    android:id="@+id/btn_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_design"
                    android:text="@string/click_search"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>